Menu screens mostly functional

--- a/client/index.html
+++ b/client/index.html
@@ -14,5 +14,9 @@
         <!--Main menu scene-->
         <button id="btn-create">Create Game</button>
         <button id="btn-join">Join Game</button>
+        <input id="room-input" placeholder="Room Code" maxlength="8">
+
+        <!--Lobby scene-->
+        <button id="start-game">Start Game</button>
     </body>
 </html>
