deck and card functionality implemented

--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,8 @@
         <link rel="stylesheet" href="/client/src/style.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/p5.js"></script>
+        <script src="/client/src/card.js"></script>
+        <script src="/client/src/deck.js"></script>
         <script src="/client/src/script.js"></script>
     </head>
     <body>
@@ -18,5 +20,8 @@
 
         <!--Lobby scene-->
         <button id="start-game">Start Game</button>
+
+        <!--Game scene-->
+        <button id="uno">Uno</button>
     </body>
 </html>
