playing a card functionality works (although card is not validated)

--- a/client/index.html
+++ b/client/index.html
@@ -21,5 +21,8 @@
 
         <!--Game scene-->
         <button id="uno">Uno</button>
+        <button id="draw">Draw</button>
+        <div id="hand"></div>
+
     </body>
 </html>
