Added wild change color functionality

--- a/client/index.html
+++ b/client/index.html
@@ -24,5 +24,18 @@
         <button id="draw">Draw</button>
         <div id="hand"></div>
 
+        <!--Wild choose color popup-->
+        <div id="choose-color" class="modal">
+
+            <!-- Modal content -->
+            <div class="modal-content">
+                <button id="RED" onclick="changeColor(this.id)">Red</button>
+                <button id="YELLOW" onclick="changeColor(this.id)">Yellow</button>
+                <button id="GREEN" onclick="changeColor(this.id)">Green</button>
+                <button id="BLUE" onclick="changeColor(this.id)">Blue</button>
+            </div>
+          
+        </div>
+
     </body>
 </html>
