drawtwo options show; skip bugs fix algo

--- a/client/index.html
+++ b/client/index.html
@@ -37,5 +37,16 @@
           
         </div>
 
+        <!--Draw 2 popup-->
+        <div id="stack-or-draw" class="modal">
+
+            <!-- Modal content -->
+            <div class="modal-content">
+                <button id="stack">Stack</button>
+                <button id="draw">Draw</button>
+            </div>
+          
+        </div>
+
     </body>
 </html>
