draw two functional

--- a/client/index.html
+++ b/client/index.html
@@ -42,8 +42,8 @@
 
             <!-- Modal content -->
             <div class="modal-content">
-                <button id="stack">Stack</button>
-                <button id="draw">Draw</button>
+                <button id="stack" onclick="handleDrawTwo(this.id)">Stack</button>
+                <button id="draw" onclick="handleDrawTwo(this.id)">Draw</button>
             </div>
           
         </div>
