--- a/client/index.html
+++ b/client/index.html
@@ -23,6 +23,7 @@
         <button id="uno">Uno</button>
         <button id="draw">Draw</button>
         <div id="hand"></div>
+        <div id="other-players"></div>
 
         <!--Wild choose color popup-->
         <div id="choose-color" class="modal">
