--- a/client/index.html
+++ b/client/index.html
@@ -24,6 +24,7 @@
         <button id="draw">Draw</button>
         <div id="hand"></div>
         <div id="other-players"></div>
+        <div id="card"></div>
 
         <!--Wild choose color popup-->
         <div id="choose-color" class="modal">
